force-app/main/default/objects/MergeResult__c/MergeResult__c.object-meta.xml
<CustomObject>
    <description>The result of a merge operation, containing information that would enable an admin to undo the operation if desired</description>
    <label>Merge Result</label>
    <nameField>
        <displayFormat>MR-{00000000}</displayFormat>
        <label>Merge Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>