force-app/main/default/objects/MergeResult__c/fields/EffectiveMasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>EffectiveMasterRecordId__c</fullName>
    <description>The Salesforce ID of the effective master record, in cases where the master record from previous merge operation was then merged into another master record</description>
    <inlineHelpText>The Salesforce ID of the effective or current master record</inlineHelpText>
    <label>Effective Master Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>