force-app/main/default/objects/MergeResult__c/fields/EffectiveMasterRecordNetsuiteId__c.field-meta.xml
<CustomField>
    <fullName>EffectiveMasterRecordNetsuiteId__c</fullName>
    <description>The NetSuite ID (if applicable) of the effective master record, in cases where the master record from previous merge operation was then merged into another master record</description>
    <inlineHelpText>The NetSuite ID (if applicable) of the effective or current master record</inlineHelpText>
    <label>Effective Master Record NetSuite ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>