force-app/main/default/objects/MergeResult__c/fields/MasterRecordBody__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordBody__c</fullName>
    <description>JSON representing the master record before the merge operation was initiated</description>
    <inlineHelpText>JSON representing the master record before the merge operation was initiated</inlineHelpText>
    <label>Master Record Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>