force-app/main/default/objects/MergeResult__c/fields/MasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordId__c</fullName>
    <description>The Salesforce ID of the master record</description>
    <inlineHelpText>The Salesforce ID of the master record</inlineHelpText>
    <label>Master Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>