force-app/main/default/objects/MergeResult__c/fields/MasterRecordNetsuiteId__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordNetsuiteId__c</fullName>
    <description>The NetSuite ID (if applicable) of the master record</description>
    <inlineHelpText>The NetSuite ID (if applicable) of the master record</inlineHelpText>
    <label>Master Record NetSuite ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>