force-app/main/default/objects/MergeResult__c/fields/MergedRecordBody__c.field-meta.xml
<CustomField>
    <fullName>MergedRecordBody__c</fullName>
    <description>JSON representing the merged record before the merge operation was initiated</description>
    <inlineHelpText>JSON representing the merged record before the merge operation was initiated</inlineHelpText>
    <label>Merged Record Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>