force-app/main/default/objects/MergeResult__c/fields/MergedRecordId__c.field-meta.xml
<CustomField>
    <fullName>MergedRecordId__c</fullName>
    <description>The Salesforce ID of the merged record</description>
    <inlineHelpText>The Salesforce ID of the merged record</inlineHelpText>
    <label>Merged Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>