force-app/main/default/objects/MergeResult__c/fields/MergedRecordNetsuiteId__c.field-meta.xml
<CustomField>
    <fullName>MergedRecordNetsuiteId__c</fullName>
    <description>The NetSuite ID (if applicable) of the merged record</description>
    <inlineHelpText>The NetSuite ID (if applicable) of the merged record</inlineHelpText>
    <label>Merged Record NetSuite ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>