force-app/main/default/objects/MergeResult__c/fields/SobjectName__c.field-meta.xml
<CustomField>
    <fullName>SobjectName__c</fullName>
    <description>The full API name (including &quot;__c&quot; for custom objects) of the object on which the field exists</description>
    <inlineHelpText>The full API name (including &quot;__c&quot; for custom objects) of the object on which the field exists</inlineHelpText>
    <label>Object Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>