force-app/main/default/objects/MergeResult__c/listViews/NewMergeResultsToday.listView-meta.xml
<ListView>
    <fullName>NewMergeResultsToday</fullName>
    <columns>NAME</columns>
    <columns>SobjectName__c</columns>
    <columns>MasterRecordId__c</columns>
    <columns>MergedRecordId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>New Merge Results Today</label>
</ListView>